--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!-- Start writing your project code in this file! -->
+<!--Probably wont have dark background later, but its easier on my eyes at the moment.-->
+<meta name ="color-scheme" content="dark">
+<!--Creating a Title for the projekt-->
+<title>Ocarina: Music Click Game</title>
+<!--Will maybe insert picture here later-->
+<figure> </figure>
+
+<script> 
+
+    
+
+
+
+
+
+</script>
